Fixes and cleanup. Added more loggers. Added some unit tests.

--- a/application/Dockerfile
+++ b/application/Dockerfile
@@ -1,6 +1,6 @@
 FROM adoptopenjdk/openjdk11:x86_64-alpine-jdk-11.0.14.1_1-slim
 
-ARG JAR_FILE=./springboot/target/SimpleApplication-1.0.0.0.jar
+ENV JAR_FILE=./springboot/target/SimpleApplication-1.0.0.0.jar
 
 COPY ${JAR_FILE} app.jar
 
