--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,8 +14,8 @@ services:
       - POSTGRES_DB=postgresdb
       - shm-size=256MB
     ports:
-      - 5432:5432
-      - 50022:22
+      - "5432:5432"
+      - "50022:22"
     healthcheck:
       test: ["CMD-SHELL", "pg_isready"]
       interval: 10s
@@ -26,7 +26,7 @@ services:
     image: adminer
     restart: always
     ports:
-      - 8080:8080
+      - "8080:8080"
   
   application:
     depends_on:
@@ -35,9 +35,9 @@ services:
     build:
       context: application/
       dockerfile: Dockerfile
-    image: springboot-application
+    image: springboot-app
     ports:
-      - 8081:8081
+      - "8081:8081"
 
   
     
